<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_topic_text_overlay_rviz_plugin</name>
  <version>0.1.0</version>
  <description>RViz panel plugin for overlaying selected text topics in the 3D view.</description>

  <maintainer email="satoshi.ota@tier4.jp">Satoshi Ota</maintainer>
  <maintainer email="takumi.odashima@tier4.jp">Takumi Odashima</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_internal_debug_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rviz_2d_overlay_msgs</depend>
  <depend>rviz_2d_overlay_plugins</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
